--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>paragraph qoshdim</p>
     <script src="./script.js"></script>
 </body>
 </html>
