--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>yana yangi sarlavha</h3>
     <h1>sarlavha</h1>
     <p>paragraph qoshdim</p>
     <script src="./script.js"></script>
