--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h3>yana yangi sarlavha</h3>
     <h1>sarlavha</h1>
     <p>paragraph qoshdim</p>
+    <p>yan yangi paragraf</p>
     <script src="./script.js"></script>
 </body>
 </html>
